// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeachingBanner matches children prop snapshot 1`] = `
<div
  className=
      ms-Stack
      ms-TeachingBanner
      {
        align-items: center;
        background: #0078d4;
        border-radius: 2px;
        box-sizing: border-box;
        color: #ffffff;
        display: flex;
        flex-wrap: wrap;
        height: auto;
        min-height: 40px;
        overflow: visible;
        padding-bottom: 1px;
        padding-left: 14px;
        padding-right: 14px;
        position: relative;
        width: 100%;
      }
>
  <div
    className=
        ms-Stack-inner
        {
          align-items: center;
          box-sizing: border-box;
          display: flex;
          flex-direction: row;
          flex-wrap: wrap;
          height: calc(100% + 8px);
          margin-bottom: -4px;
          margin-left: -4px;
          margin-right: -4px;
          margin-top: -4px;
          max-width: 100vw;
          overflow: visible;
          width: calc(100% + 8px);
        }
        & > * {
          margin-bottom: 4px;
          margin-left: 4px;
          margin-right: 4px;
          margin-top: 4px;
          max-width: calc(100% - 8px);
          text-overflow: ellipsis;
        }
        & > *:not(.ms-StackItem) {
          flex-shrink: 1;
        }
  >
    <div
      className=
          ms-StackItem
          ms-TeachingBanner-content
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            flex-grow: 1;
            flex-shrink: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: auto;
            padding-bottom: 10px;
            padding-top: 10px;
            width: auto;
          }
    >
      Text
    </div>
  </div>
</div>
`;

exports[`TeachingBanner renders children prop correctly 1`] = `
<div
  className=
      ms-Stack
      ms-TeachingBanner
      {
        align-items: center;
        background: #0078d4;
        border-radius: 2px;
        box-sizing: border-box;
        color: #ffffff;
        display: flex;
        flex-wrap: wrap;
        height: auto;
        min-height: 40px;
        overflow: visible;
        padding-bottom: 1px;
        padding-left: 14px;
        padding-right: 14px;
        position: relative;
        width: 100%;
      }
>
  <div
    className=
        ms-Stack-inner
        {
          align-items: center;
          box-sizing: border-box;
          display: flex;
          flex-direction: row;
          flex-wrap: wrap;
          height: calc(100% + 8px);
          margin-bottom: -4px;
          margin-left: -4px;
          margin-right: -4px;
          margin-top: -4px;
          max-width: 100vw;
          overflow: visible;
          width: calc(100% + 8px);
        }
        & > * {
          margin-bottom: 4px;
          margin-left: 4px;
          margin-right: 4px;
          margin-top: 4px;
          max-width: calc(100% - 8px);
          text-overflow: ellipsis;
        }
        & > *:not(.ms-StackItem) {
          flex-shrink: 1;
        }
  >
    <div
      className=
          ms-StackItem
          ms-TeachingBanner-content
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            flex-grow: 1;
            flex-shrink: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: auto;
            padding-bottom: 10px;
            padding-top: 10px;
            width: auto;
          }
    >
      Text
    </div>
  </div>
</div>
`;

exports[`TeachingBanner renders correctly with no props 1`] = `
<div
  className=
      ms-Stack
      ms-TeachingBanner
      {
        align-items: center;
        background: #0078d4;
        border-radius: 2px;
        box-sizing: border-box;
        color: #ffffff;
        display: flex;
        flex-wrap: wrap;
        height: auto;
        min-height: 40px;
        overflow: visible;
        padding-bottom: 1px;
        padding-left: 14px;
        padding-right: 14px;
        position: relative;
        width: 100%;
      }
>
  <div
    className=
        ms-Stack-inner
        {
          align-items: center;
          box-sizing: border-box;
          display: flex;
          flex-direction: row;
          flex-wrap: wrap;
          height: calc(100% + 8px);
          margin-bottom: -4px;
          margin-left: -4px;
          margin-right: -4px;
          margin-top: -4px;
          max-width: 100vw;
          overflow: visible;
          width: calc(100% + 8px);
        }
        & > * {
          margin-bottom: 4px;
          margin-left: 4px;
          margin-right: 4px;
          margin-top: 4px;
          max-width: calc(100% - 8px);
          text-overflow: ellipsis;
        }
        & > *:not(.ms-StackItem) {
          flex-shrink: 1;
        }
  />
</div>
`;
